--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,31 @@
+##
+# Canary core library.
+
 project(canary CXX)
 
+# Initializes internal cmake utilities.
 include(internal_utils)
 config_compiler_and_linker()
 
+# Adds header file search directory.
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+# canary_core library target.
 cxx_static_library(canary_core "${cxx_default}" shared/internal.cc)
 add_dependencies(canary_core project_gflags project_glog project_cereal project_libevent)
+# Library linking order matters. Dependency libraries are public so that built
+# executables can link to them.
 target_link_libraries(canary_core PUBLIC glog gflags event_pthreads event_core pthread dl)
 
+# Worker executable.
 cxx_executable(canary_worker worker "canary_core")
+# Controller executable.
 cxx_executable(canary_controller controller "canary_core")
 
-file(GLOB_RECURSE ALL_SOURCES "*.cc" "*.h")
+file(GLOB_RECURSE ALL_CANARY_SOURCES "*.cc" "*.h")
 
 # Checks code style.
-add_custom_target(check ${CMAKE_SOURCE_DIR}/tools/cpplint.py ${ALL_SOURCES} COMMENT "Check coding style.")
+add_custom_target(check "${CPPLINT_TOOL}" ${ALL_CANARY_SOURCES} COMMENT "Checks coding style.")
 
-# Format codes in place.
-add_custom_target(format clang-format-3.6 --style=Google -i ${ALL_SOURCES} COMMENT "Reformat all source codes.")
+# Formats codes in place.
+add_custom_target(format "${FORMAT_TOOL}" ${ALL_CANARY_SOURCES} COMMENT "Formats all source codes.")
