--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,14 @@
-project(parsec CXX)
+project(canary_library_test CXX)
 
+# Initializes internal cmake utilities.
 include(internal_utils)
 config_compiler_and_linker()
 
+# Adds header file search directory.
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src/)
 
-set(test_libraries canary_core gtest_main gtest)
-cxx_test(basic worker "${test_libraries}")
+# Configure test libraries.
+set(TEST_LIBRARIES canary_core gtest_main gtest)
+
+cxx_test(basic worker "${TEST_LIBRARIES}")
