Refactor the message handling facilities.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ cxx_static_library(canary_core "${cxx_default}"
     shared/internal_flag.cc
     shared/internal_network.cc
     shared/partition_map.cc
+    message/message.cc
     controller/controller_communication_manager.cc
     worker/worker_communication_manager.cc
     worker/worker_data_router.cc
