--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,11 +14,11 @@ set(TEST_LIBRARIES canary_core gtest)
 cxx_test(basic_marshal . "${TEST_LIBRARIES}")
 cxx_test(intensive_marshal . "${TEST_LIBRARIES}")
 
+# Test the command exchanging between one controller and multile workers.
+cxx_test(basic_command_exchange . "${TEST_LIBRARIES}")
+
 cxx_executable(basic_server . "canary_core")
 cxx_executable(basic_client . "canary_core")
-
-# Test the command exchanging between one controller and multile workers.
-cxx_executable(basic_command_exchange . "canary_core")
 
 # Test the command exchanging between one controller and one worker.
 cxx_executable(worker_command_manager worker "canary_core")
