evbuffer managerment seems error-prone. evbuffer_add_reference is not thread safe.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,9 +17,8 @@ cxx_test(intensive_marshal . "${TEST_LIBRARIES}")
 # Test the command exchanging between one controller and multile workers.
 cxx_test(basic_command_exchange . "${TEST_LIBRARIES}")
 
+# Test the data exchanging between multile workers.
+cxx_executable(basic_data_exchange . "${TEST_LIBRARIES}")
+
 cxx_executable(basic_server . "canary_core")
 cxx_executable(basic_client . "canary_core")
-
-# Test the command exchanging between one controller and one worker.
-cxx_executable(worker_command_manager worker "canary_core")
-cxx_executable(controller_command_manager controller "canary_core")
