Update file structure.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,9 +12,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # canary_core library target.
 cxx_static_library(canary_core "${cxx_default}"
+    shared/canary_internal.cc
     shared/initialize.cc
-    shared/internal_flag.cc
-    shared/internal_network.cc
+    shared/network.cc
     shared/partition_map.cc
     message/message.cc
     controller/controller_communication_manager.cc
