--- a/app/logistic_loop/CMakeLists.txt
+++ b/app/logistic_loop/CMakeLists.txt
@@ -13,4 +13,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # An application is built as a shared library.
 cxx_shared_library(logistic_loop "${cxx_default}" logistic_loop.cc)
 # canary_core library must be built before.
-add_dependencies(parsec canary_core)
+add_dependencies(logistic_loop canary_core)
