--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,3 +22,5 @@ cxx_executable(basic_data_exchange . "canary_core")
 
 cxx_executable(basic_server . "canary_core")
 cxx_executable(basic_client . "canary_core")
+
+cxx_executable(basic_load_and_print . "canary_core")
