Add parsec application.

--- a/app/parsec/CMakeLists.txt
+++ b/app/parsec/CMakeLists.txt
@@ -11,6 +11,6 @@ config_compiler_and_linker()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # An application is built as a shared library.
-cxx_shared_library(parsec "${cxx_default}" f.cc)
+cxx_shared_library(parsec "${cxx_default}" cellpool.cc parsec-canary.cc)
 # canary_core library must be built before.
 add_dependencies(parsec canary_core)
