Add new applications.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,3 +24,5 @@ cxx_executable(basic_server . "canary_core")
 cxx_executable(basic_client . "canary_core")
 
 cxx_executable(basic_load_and_print . "canary_core")
+
+cxx_executable(playground . "canary_core")
