Add stencil application. Not tested.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(parsec)
 add_subdirectory(logistic_loop)
 add_subdirectory(logistic_while)
 add_subdirectory(kmean_loop)
+add_subdirectory(stencil)
