Barrier test application added.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(logistic_loop)
 add_subdirectory(logistic_while)
 add_subdirectory(parsec)
 add_subdirectory(stencil)
+add_subdirectory(barrier)
