--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,10 @@ add_subdirectory(app)
 add_subdirectory(test)
 # Builds canary external headers.
 add_subdirectory(include)
+
+# Doxygen documentation.
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+  add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile COMMENT "Generating API documentation with Doxygen" VERBATIM)
+endif(DOXYGEN_FOUND)
