--- a/app/logistic_while/CMakeLists.txt
+++ b/app/logistic_while/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##
-# Logistic regression application.
+# Logistic regression application runnign conditional loops.
 
 project(logistic_while CXX)
 
