--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -2,7 +2,8 @@ PROJECT_NAME           = "@CMAKE_PROJECT_NAME@"
 PROJECT_NUMBER         = 0.0.1
 STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@
 INPUT                  = @PROJECT_SOURCE_DIR@/src \
-                         @PROJECT_SOURCE_DIR@/include
+                         @PROJECT_SOURCE_DIR@/include \
+                         @PROJECT_SOURCE_DIR@/README.md \
 FILE_PATTERNS          = *.h \
                          *.cc \
                          *.md
