--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(logistic_while)
 add_subdirectory(parsec)
 add_subdirectory(stencil)
 add_subdirectory(barrier)
+add_subdirectory(shuffle)
