--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(parsec)
 add_subdirectory(stencil)
 add_subdirectory(barrier)
 add_subdirectory(shuffle)
+add_subdirectory(pagerank)
