--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,5 +5,6 @@ add_subdirectory(logistic_while)
 add_subdirectory(parsec)
 add_subdirectory(stencil)
 add_subdirectory(barrier)
+add_subdirectory(sumup)
 add_subdirectory(shuffle)
 add_subdirectory(pagerank)
