Add a cuda applicaiton.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(parsec)
 add_subdirectory(stencil)
 add_subdirectory(barrier)
 add_subdirectory(sumup)
+add_subdirectory(cuda_sumup)
 add_subdirectory(shuffle)
 add_subdirectory(pagerank)
