--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,6 +6,8 @@ add_subdirectory(parsec)
 add_subdirectory(stencil)
 add_subdirectory(barrier)
 add_subdirectory(sumup)
-add_subdirectory(cuda_sumup)
 add_subdirectory(shuffle)
 add_subdirectory(pagerank)
+IF(build_gpu)
+add_subdirectory(cuda_sumup)
+ENDIF()
