--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(shuffle)
 add_subdirectory(pagerank)
 IF(build_gpu)
 add_subdirectory(cuda_sumup)
+add_subdirectory(cuda_logistic_loop)
 ENDIF()
